--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 	</head>
 	<body>
 		<h1>MY First Git Repository</h1>
+		<h4>Make it personal</h4>
+			<p>Add your date of birth to display your own Initial Enrollment Period (IEP) in the timeline above.</p>
+			<h5>What is your date of birth?</h5>
 	</body>
 </html>
