--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<script type="text/javascript">
+			alert;
+		</script>
 		<title>MY First Git Repository</title>
 	</head>
 	<body>
