--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script type="text/javascript">
-			alert;
-		</script>
+		
 		<title>MY First Git Repository</title>
 	</head>
 	<body>
@@ -12,4 +10,8 @@
 			<p>Add your date of birth to display your own Initial Enrollment Period (IEP) in the timeline above.</p>
 			<h5>What is your date of birth?</h5>
 	</body>
+	<script type="text/javascript">
+			var 
+				alert("ok");
+	</script>
 </html>
